<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".CreateEvent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="120dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:hint="@string/new_event_input_name_text"
                    android:inputType="text"
                    android:maxLines="1"
                    android:overScrollMode="always"
                    android:scrollHorizontally="true"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/regular_event_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:onClick="customEvent"
                    android:text="@string/regular_event" />

                <RadioButton
                    android:id="@+id/custom_event_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="customEvent"
                    android:text="@string/custom_event" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/regular_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/regular_event_description_text" />

                <EditText
                    android:id="@+id/event_description_multi_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:autofillHints="@string/event_description_custom"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/event_description_regular"
                    android:inputType="textMultiLine"
                    android:textColorHint="@android:color/widget_edittext_dark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/regular_event_date_text" />

                <EditText
                    android:id="@+id/event_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:autofillHints="@string/event_description_custom"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/event_date_regular"
                    android:inputType="textMultiLine"
                    android:textColorHint="@android:color/widget_edittext_dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/event_description_custom_title" />

                <EditText
                    android:id="@+id/event_description_multi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginEnd="36dp"
                    android:autofillHints="@string/event_description_custom"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/event_description_custom"
                    android:inputType="textMultiLine"
                    android:textColorHint="@android:color/widget_edittext_dark"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="36dp"
                android:onClick="previewEvent"
                android:text="@string/preview_event_button" />

            <TextView
                android:id="@+id/event_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:text="@string/event_preview" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="36dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancelCreateEvent"
                    android:text="@string/button_cancel" />

                <Button
                    android:id="@+id/button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="36dp"
                    android:onClick="submitEvent"
                    android:text="@string/button_create_event_name" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>